re PR middle-end/32935 (internal compiler error: in emit_move_insn, at expr.c:3316)

2007-08-03  Andrew Pinski  <andrew_pinski@playstation.sony.com>
 
        PR middle-end/32935
        * fold-convert.c (fold_negate_expr <NOP_EXPR>): Convert back to the 
         correct type the negate expression.

2007-08-03  Andrew Pinski  <andrew_pinski@playstation.sony.com>

        PR middle-end/32935
        * gfortran.fortran-torture/compile/complex_1.f90: New test.

From-SVN: r127190