gcc/testsuite/gfortran.fortran-torture/compile/complex_1.f90
@@ -1,0 +1,5 @@
+program test_gfortran2
+ Complex(8) :: g, zh
+ Real(8)    :: g_q
+ g =   zh - zh/cmplx(0.0_8,-g_q)
+end
